--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head><h1>hello</h1>
+  <head><h1>WELCOME TO SCARY MOVIES</head></h1>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Creepster" rel="stylesheet">
+
   </head>
   <body>
-    <!-- page content -->
-  </body>
-</html>
+    <img src="http://www.wowkeren.com/images/news/00088668.jpg">
+    <ul>
+      <p>This is about my love for horror/thriller movies. Most people like me love watching scary movie. Most of the movies im going to mention are movies i really enjoyed. Not all of them are horror movies some of them are thrillers which in my opinion are just as good. Here are my thoughts on these movies i hope you like it.</p>
+<ul>
+ <h2> THE RULES OF HORROR/THRILLER MOVIES</h2>
+  <p> There are rules for these types of movies that charaters fail to follow.If you were in a horror you must follow these rules or else you die. theses are the rules. RULE number one NEVER ever have sex because SEX=DEATH.  RULE number two Don't drink or do drugs.RULE number three NEVER say "I'll be right back" there is a 99.99% chance you will not be coming back the only exception is parnormal activity becuase they all usually die anyways.RULE number four everyone dies in the sequals so you must be extra careful who you get angry becuase they can easily be the next killer.
+  <a href="http://www.mtv.com/news/2196050/scream-movie-rules/">here is where i got my information</a>
+    </body>
+    </html>
